# BBDM

./: README.md  Register.py  main.py  prepare_data_folder.py  pyproject.toml  requirements.txt  utils.py
configs/: Template-BBDM.yaml  Template-LBBDM-f4.yaml
datasets/: base.py  custom.py  utils.py
evaluation/: FID.py  diversity.py
model/: utils.py
model/BrownianBridge/: BrownianBridgeModel.py  LatentBrownianBridgeModel.py
model/BrownianBridge/base/: util.py
model/BrownianBridge/base/modules/: attention.py  x_transformer.py
model/VQGAN/taming/data/: annotated_objects_dataset.py:Zone.Identifier
results/custom_ct_translation/BrownianBridge/checkpoint/: config.yaml
results/custom_ct_translation/BrownianBridge/log/: events.out.tfevents.1748844056.young.433752.0  events.out.tfevents.1748844291.young.434580.0  events.out.tfevents.1748844421.young.435084.0  events.out.tfevents.1748844457.young.435287.0  events.out.tfevents.1748844681.young.436241.0  events.out.tfevents.1748854378.young.468421.0  events.out.tfevents.1748854411.young.468652.0  events.out.tfevents.1748880347.young.550880.0  events.out.tfevents.1748954529.young.617472.0  events.out.tfevents.1748955192.young.619683.0  events.out.tfevents.1748955609.young.621114.0  events.out.tfevents.1748968685.young.663631.0  events.out.tfevents.1749019691.young.803674.0  events.out.tfevents.1749020446.young.807590.0  events.out.tfevents.1749020544.young.808031.0  (+9 more)
runners/: BaseRunner.py  utils.py
runners/DiffusionBasedModelRunners/: BBDMRunner.py  DiffusionBaseRunner.py
runners/base/: EMA.py
(+2 files in other folders)
